--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Styles.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Styles.axaml
@@ -1,5 +1,13 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <Styles.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceInclude Source="avares://FileTime.GuiApp/Resources/Converters.axaml"></ResourceInclude>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Styles.Resources>
+
     <FluentTheme Mode="Dark" />
 
     <Style Selector="TextBlock">
@@ -20,15 +28,15 @@
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
     </Style>
-    <Style Selector="ListBox.ContentListView &gt; ListBoxItem">
+    <Style Selector="ListBox.ContentListView > ListBoxItem">
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="0" />
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="HorizontalContentAlignment" Value="Stretch" />
         <Setter Property="HorizontalAlignment" Value="Stretch" />
-        <!--Setter Property="ContextMenu">
-				<ContextMenu Items="{Binding Converter={StaticResource ContextMenuGenerator}}"/>
-			</Setter-->
+        <Setter Property="ContextMenu">
+            <ContextMenu Items="{Binding Converter={StaticResource ContextMenuGenerator}}" />
+        </Setter>
     </Style>
 
     <Style Selector="Grid.SidebarContainerPresenter">
