Frequency navigation WIP

--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/MainWindow.axaml
@@ -709,6 +709,15 @@
                 </Border>
             </Border>
 
+            <Border
+                DataContext="{Binding FrequencyNavigationService.CurrentModal}"
+                Margin="100"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="{DynamicResource BarelyTransparentBackgroundColor}"
+                IsVisible="{Binding ShowWindow^, FallbackValue=False}">
+                <local:FrequencyNavigation />
+            </Border>
         </Grid>
 
         <Grid IsVisible="{Binding Loading}">
