--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Styles.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Resources/Styles.axaml
@@ -40,6 +40,21 @@
         </Setter>
     </Style>
 
+    <Style Selector="ListBox.CommandPalette">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+    </Style>
+    <Style Selector="ListBox.CommandPalette &gt; ListBoxItem">
+        <Setter Property="Margin" Value="0" />
+        <Setter Property="Padding" Value="0" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="HorizontalAlignment" Value="Stretch" />
+    </Style>
+    <Style Selector="ListBox.CommandPalette &gt; ListBoxItem[IsSelected=true] TextBlock">
+        <Setter Property="Foreground" Value="{DynamicResource SelectedItemForegroundBrush}" />
+    </Style>
+
     <Style Selector="Grid.SidebarContainerPresenter">
         <Setter Property="Background" Value="#01000000" />
     </Style>
