--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/ItemView.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/ItemView.axaml
@@ -1,97 +1,153 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:appcore="using:FileTime.App.Core.ViewModels"
-			 xmlns:appcoreenums="using:FileTime.App.Core.Models.Enums"
-			 xmlns:guiappvm="using:FileTime.GuiApp.ViewModels"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="FileTime.GuiApp.Views.ItemView"
-			 x:Name="ItemRoot"
-			 HorizontalContentAlignment="Stretch"
-			 HorizontalAlignment="Stretch"
-			 Background="{Binding ViewMode^,Converter={StaticResource ItemViewModeToBackgroundConverter}}"
-			 x:CompileBindings="True"
-			 x:DataType="appcore:IItemViewModel">
-	<Grid ColumnDefinitions="20,*,Auto" Margin="3" x:Name="RootGrid">
-		<Grid.Styles>
-			<Style Selector="TextBlock">
-				<Setter x:CompileBindings="False" Property="Foreground" Value="{Binding DataContext.ViewMode^,Converter={StaticResource ItemViewModeToForegroundConverter},ElementName=ItemRoot}"/>
-			</Style>
-		</Grid.Styles>
-		<Image
-			Width="18"
-			Height="18"
-			HorizontalAlignment="Left"
-			VerticalAlignment="Center"
-			Source="{Binding Converter={StaticResource ItemToImageConverter}}" />
+<UserControl
+    x:Class="FileTime.GuiApp.Views.ItemView"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:appcore="using:FileTime.App.Core.ViewModels"
+    xmlns:appcoreenums="using:FileTime.App.Core.Models.Enums"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:guiappvm="using:FileTime.GuiApp.ViewModels"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="ItemRoot"
+    HorizontalAlignment="Stretch"
+    HorizontalContentAlignment="Stretch"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    x:CompileBindings="True"
+    x:DataType="appcore:IItemViewModel"
+    Background="{Binding ViewMode^, Converter={StaticResource ItemViewModeToBackgroundConverter}}"
+    mc:Ignorable="d">
+    <Grid
+        x:Name="RootGrid"
+        Margin="3"
+        ColumnDefinitions="20,*,Auto">
+        <Grid.Styles>
+            <Style Selector="TextBlock">
+                <Setter x:CompileBindings="False" Property="Foreground" Value="{Binding DataContext.ViewMode^, Converter={StaticResource ItemViewModeToForegroundConverter}, ElementName=ItemRoot}" />
+            </Style>
+        </Grid.Styles>
+        <Image
+            Width="18"
+            Height="18"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Source="{Binding Converter={StaticResource ItemToImageConverter}}" />
 
-		<ItemsControl
-			Margin="5,0,0,0"
-			Grid.Column="1"
-			VerticalAlignment="Center"
-			HorizontalAlignment="Stretch">
-			<ItemsControl.Items>
-				<MultiBinding Converter="{StaticResource NamePartShrinkerConverter}">
-					<MultiBinding.Bindings>
-						<Binding Path="DisplayName^"/>
-						<Binding ElementName="RootGrid" Path="Bounds.Width"/>
-						<Binding ElementName="ItemRoot" Path="ShowAttributes"/>
-					</MultiBinding.Bindings>
-				</MultiBinding>
-			</ItemsControl.Items>
-			<ItemsControl.ItemsPanel>
-				<ItemsPanelTemplate>
-					<StackPanel Orientation="Horizontal" />
-				</ItemsPanelTemplate>
-			</ItemsControl.ItemsPanel>
-			<ItemsControl.ItemTemplate>
-				<DataTemplate x:DataType="guiappvm:ItemNamePartViewModel">
-					<Grid>
-						<TextBlock
-							Text="{Binding Text}"
-							TextDecorations="{Binding TextDecorations}"/>
-					</Grid>
-				</DataTemplate>
-			</ItemsControl.ItemTemplate>
-		</ItemsControl>
+        <ItemsControl
+            Grid.Column="1"
+            Margin="5,0,0,0"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Center">
+            <ItemsControl.ItemsSource>
+                <MultiBinding Converter="{StaticResource NamePartShrinkerConverter}">
+                    <MultiBinding.Bindings>
+                        <Binding Path="DisplayName^" />
+                        <Binding
+                            ElementName="RootGrid"
+                            Path="Bounds.Width" />
+                        <Binding
+                            ElementName="ItemRoot"
+                            Path="ShowAttributes" />
+                    </MultiBinding.Bindings>
+                </MultiBinding>
+            </ItemsControl.ItemsSource>
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate x:DataType="guiappvm:ItemNamePartViewModel">
+                    <Grid>
+                        <TextBlock
+                            Text="{Binding Text}"
+                            TextDecorations="{Binding TextDecorations}" />
+                    </Grid>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
-		<Grid Grid.Column="2" IsVisible="{Binding ShowAttributes,ElementName=ItemRoot}">
-			<Grid ColumnDefinitions="50,50,90,40,45"
-				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.File}}"
-				  x:DataType="appcore:IFileViewModel">
+        <Grid
+            Grid.Column="2"
+            IsVisible="{Binding ShowAttributes, ElementName=ItemRoot}">
+            <Grid
+                HorizontalAlignment="Right"
+                x:DataType="appcore:IFileViewModel"
+                ColumnDefinitions="50,50,90,40,45"
+                IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter}, ConverterParameter={x:Static appcoreenums:ItemAttributeType.File}}">
 
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding BaseItem.DisplayName, Converter={StaticResource GetFileExtensionConverter}}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="1" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="2" Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=yyyy-MM-dd}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="3" Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=hh:mm}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="4" Text="{Binding BaseItem.Attributes}"/>
-			</Grid>
-			<Grid ColumnDefinitions="90,40,45"
-				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.Container}}"
-				  x:DataType="appcore:IContainerViewModel">
+                <TextBlock
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.DisplayName, Converter={StaticResource GetFileExtensionConverter}}" />
+                <TextBlock
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}" />
+                <TextBlock
+                    Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=yyyy-MM-dd}" />
+                <TextBlock
+                    Grid.Column="3"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=hh:mm}" />
+                <TextBlock
+                    Grid.Column="4"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.Attributes}" />
+            </Grid>
+            <Grid
+                HorizontalAlignment="Right"
+                x:DataType="appcore:IContainerViewModel"
+                ColumnDefinitions="90,40,45"
+                IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter}, ConverterParameter={x:Static appcoreenums:ItemAttributeType.Container}}">
 
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=yyyy-MM-dd}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="1" Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=hh:mm}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="2" Text="{Binding BaseItem.Attributes}"/>
-			</Grid>
-			<Grid ColumnDefinitions="50,90,40,45"
-				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.SizeContainer}}"
-				  x:DataType="appcore:IContainerSizeContainerViewModel">
+                <TextBlock
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=yyyy-MM-dd}" />
+                <TextBlock
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.CreatedAt, Converter={StaticResource DateTimeConverter}, ConverterParameter=hh:mm}" />
+                <TextBlock
+                    Grid.Column="2"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.Attributes}" />
+            </Grid>
+            <Grid
+                HorizontalAlignment="Right"
+                x:DataType="appcore:IContainerSizeContainerViewModel"
+                ColumnDefinitions="50,90,40,45"
+                IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter}, ConverterParameter={x:Static appcoreenums:ItemAttributeType.SizeContainer}}">
 
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}"/>
-			</Grid>
-			<Grid ColumnDefinitions="50,50"
-				  HorizontalAlignment="Right"
-				  IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter},ConverterParameter={x:Static appcoreenums:ItemAttributeType.Element}}"
-				  x:DataType="appcore:IElementViewModel">
+                <TextBlock
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}" />
+            </Grid>
+            <Grid
+                HorizontalAlignment="Right"
+                x:DataType="appcore:IElementViewModel"
+                ColumnDefinitions="50,50"
+                IsVisible="{Binding Converter={StaticResource ItemViewModelIsAttributeTypeConverter}, ConverterParameter={x:Static appcoreenums:ItemAttributeType.Element}}">
 
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Text="{Binding BaseItem.DisplayName, Converter={StaticResource GetFileExtensionConverter}}"/>
-				<TextBlock HorizontalAlignment="Right" Classes="SmallText" Grid.Column="1" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}"/>
-			</Grid>
-		</Grid>
-	</Grid>
+                <TextBlock
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding BaseItem.DisplayName, Converter={StaticResource GetFileExtensionConverter}}" />
+                <TextBlock
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    Classes="SmallText"
+                    Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}" />
+            </Grid>
+        </Grid>
+    </Grid>
 </UserControl>
