--- a/src/GuiApp/Avalonia/FileTime.GuiApp/Views/PathPresenter.axaml
+++ b/src/GuiApp/Avalonia/FileTime.GuiApp/Views/PathPresenter.axaml
@@ -1,11 +1,14 @@
-<UserControl xmlns="https://github.com/avaloniaui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             xmlns:coremodels="using:FileTime.Core.Models"
-             x:Class="FileTime.GuiApp.Views.PathPresenter">
-    <ItemsControl Items="{Binding Converter={StaticResource SplitStringConverter}, ConverterParameter={x:Static coremodels:Constants.SeparatorChar}}">
+<UserControl
+    x:Class="FileTime.GuiApp.Views.PathPresenter"
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:coremodels="using:FileTime.Core.Models"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+    <ItemsControl ItemsSource="{Binding Converter={StaticResource SplitStringConverter}, ConverterParameter={x:Static coremodels:Constants.SeparatorChar}}">
         <ItemsControl.ItemsPanel>
             <ItemsPanelTemplate>
                 <StackPanel Orientation="Horizontal" />
@@ -14,8 +17,11 @@
         <ItemsControl.ItemTemplate>
             <DataTemplate>
                 <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="{Binding}"/>
-                    <TextBlock Text="/" Margin="5,0,5,0" Foreground="{DynamicResource LightForegroundBrush}"/>
+                    <TextBlock Text="{Binding}" />
+                    <TextBlock
+                        Margin="5,0,5,0"
+                        Foreground="{DynamicResource LightForegroundBrush}"
+                        Text="/" />
                 </StackPanel>
             </DataTemplate>
         </ItemsControl.ItemTemplate>
